--- a/PinkyAndNoisy/PinkyAndNoisy/Resources/Info.plist
+++ b/PinkyAndNoisy/PinkyAndNoisy/Resources/Info.plist
@@ -50,5 +50,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSSiriUsageDescription</key>
+	<string>${PRODUCT_NAME) would like to access Siri</string>
 </dict>
 </plist>
